--- a/CovidCases.Service/CovidCases.Service.csproj
+++ b/CovidCases.Service/CovidCases.Service.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.19" />
+    <PackageReference Include="RestSharp" Version="106.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CovidCases.Contract\CovidCases.Contract.csproj" />
     <ProjectReference Include="..\CovidCases.Data\CovidCases.Data.csproj" />
   </ItemGroup>
